--- a/public/404.html
+++ b/public/404.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Node - Express</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Page Not found</title>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <hr>
+    
+    <h2>404 Page not found</h2>
+    <a href="/">
+        Ir al home
+    </a>
 </body>
 </html>
